# volume-locker

./: .gitignore  Cargo.toml  README.md  build.rs  renovate.json  rust-toolchain.toml
.github/workflows/: ci.yaml
scripts/: update.ps1
src/: app.rs  audio.rs  config.rs  consts.rs  main.rs  notification.rs  types.rs  ui.rs  update.rs  utils.rs
src/audio/: migration.rs  mod.rs  policy_config.rs  priority.rs  windows.rs  windows_com_policy_config.rs
src/config/: mod.rs  persistence.rs
src/platform/: mod.rs  windows.rs
src/ui/: event_handler.rs  menu_builder.rs  mod.rs
src/ui/event_handler/: mod.rs  tests.rs
src/ui/menu_builder/: device_section.rs  mod.rs  priority_section.rs  tests.rs
