[package]
name = "volume-locker"
version = "0.0.0-development"
edition = "2024"
build = "build.rs"

[package.metadata.winresource]
FileDescription = "Volume Locker"
ProductName = "Volume Locker"
CompanyName = "Felipe Santos"
LegalCopyright = "Copyright © 2025 Felipe Santos"
OriginalFilename = "VolumeLocker.exe"

[[bin]]
name = "VolumeLocker"
path = "src/main.rs"

[dependencies]
auto-launch = "0.5.0"
faccess = "0.2.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tao = "0.34.3"
tray-icon = "0.21.1"
single-instance = "0.3.3"
log = "0.4.28"
simplelog = "0.12.2"
regex-lite = "0.1.7"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = "0.7.2"
windows-registry = "0.6.0"
windows-core = "0.62.0"
windows = { version = "0.61.3", features = [
	"Win32_Devices_FunctionDiscovery",
	"Win32_Foundation",
	"Win32_Media_Audio",
	"Win32_Media_Audio_Endpoints",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Variant",
	"Win32_UI_Shell_PropertiesSystem",
] }
com-policy-config = "0.6.0"
widestring = "1.2.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.20"
