[package]
name = "volume-locker"
version = "0.0.0-development"
edition = "2024"
build = "build.rs"

[package.metadata.winresource]
FileDescription = "Volume Locker"
ProductName = "Volume Locker"
CompanyName = "Felipe Santos"
LegalCopyright = "Copyright © 2025 Felipe Santos"
OriginalFilename = "VolumeLocker.exe"

[[bin]]
name = "VolumeLocker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
auto-launch = "0.6.0"
dunce = "1.0.5"
faccess = "0.2.4"
log = "0.4.29"
notify-rust = "4.17.0"
open = "5.3.3"
regex-lite = "0.1.9"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simplelog = "0.12.2"
single-instance = "0.3.3"
tao = "0.35.0"
tray-icon = "0.22.0"
ureq = { version = "3.3.0", default-features = false, features = [
	"native-tls",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-registry = "0.6.1"
windows-core = "0.62.2"
windows = { version = "0.62.2", features = [
	"Win32_Devices_FunctionDiscovery",
	"Win32_Foundation",
	"Win32_Media_Audio",
	"Win32_Media_Audio_Endpoints",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Variant",
	"Win32_UI_Shell_PropertiesSystem",
	"Devices_Custom",
] }
widestring = "1.2.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.31"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
