[package]
name = "volume-locker"
version = "0.0.0-development"
edition = "2024"
license = "MIT"
description = "A Windows tray application that locks audio device volumes and enforces device priority settings"
build = "build.rs"
repository = "https://github.com/felipecrs/volume-locker"
categories = ["multimedia::audio"]
keywords = ["audio", "volume", "windows", "tray"]

[package.metadata.winresource]
FileDescription = "Volume Locker"
ProductName = "Volume Locker"
CompanyName = "Felipe Santos"
LegalCopyright = "Copyright © 2025 Felipe Santos"
OriginalFilename = "VolumeLocker.exe"

[[bin]]
name = "VolumeLocker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
auto-launch = "0.6.0"
dunce = "1.0.5"

log = "0.4.29"
notify-rust = "4.17.0"
open = "5.3.5"
regex-lite = "0.1.9"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simplelog = "0.12.2"

tao = "0.35.2"
tray-icon = "0.24.0"
ureq = { version = "3.3.0", default-features = false, features = [
	"native-tls",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-registry = "0.6.1"
windows-core = "0.62.2"
windows = { version = "0.62.2", features = [
	"Win32_Devices_FunctionDiscovery",
	"Win32_Foundation",
	"Win32_Media_Audio",
	"Win32_Media_Audio_Endpoints",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Variant",
	"Win32_UI_Shell_PropertiesSystem",
	"Win32_Security",
	"Win32_System_Threading",
	"Devices_Custom",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.31"

[lints.clippy]
# Generated by #[implement] macro — cannot be fixed without the allow
inline_always = "allow"
# PersistentState has 4+ boolean config flags; this is inherent to config structs
struct_excessive_bools = "allow"
# All f32 comparisons in tests are exact-value checks on clamped constants (0.0, 50.0, 100.0)
float_cmp = "allow"

[lints.rust]
# COM vtable structs follow Win32 naming conventions
non_camel_case_types = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
